--- a/requirements-lint.txt
+++ b/requirements-lint.txt
@@ -8,6 +8,7 @@ asgiref==3.8.1
     # via
     #   -c requirements.txt
     #   django
+    #   django-stubs
 celery-stubs==0.1.3
     # via -r requirements-lint.in
 certifi==2024.2.2
@@ -18,18 +19,18 @@ charset-normalizer==3.3.2
     # via
     #   -c requirements.txt
     #   requests
-django==5.0.4
+django==5.0.6
     # via
     #   -c requirements.txt
     #   django-stubs
     #   django-stubs-ext
-django-stubs==4.2.7
+django-stubs==5.0.0
     # via
     #   -r requirements-lint.in
     #   djangorestframework-stubs
-django-stubs-ext==4.2.7
+django-stubs-ext==5.0.0
     # via django-stubs
-djangorestframework-stubs==3.14.5
+djangorestframework-stubs==3.15.0
     # via -r requirements-lint.in
 graphene-stubs==0.16
     # via -r requirements-lint.in
@@ -50,7 +51,7 @@ requests==2.31.0
     # via
     #   -c requirements.txt
     #   djangorestframework-stubs
-ruff==0.4.2
+ruff==0.4.4
     # via -r requirements-lint.in
 sqlparse==0.5.0
     # via
@@ -58,8 +59,6 @@ sqlparse==0.5.0
     #   django
 types-python-dateutil==2.9.0.20240316
     # via -r requirements-lint.in
-types-pytz==2024.1.0.20240417
-    # via django-stubs
 types-pyyaml==6.0.12.20240311
     # via
     #   django-stubs
