--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ attrs==23.2.0
     # via
     #   jsonschema
     #   referencing
-babel==2.14.0
+babel==2.15.0
     # via -r requirements.in
 beautifulsoup4==4.12.3
     # via wagtail
@@ -65,11 +65,9 @@ coreapi==2.3.3
     # via -r requirements.in
 coreschema==0.0.4
     # via coreapi
-coverage[toml]==7.5.0
-    # via
-    #   coverage
-    #   pytest-cov
-cryptography==42.0.5
+coverage[toml]==7.5.1
+    # via pytest-cov
+cryptography==42.0.7
     # via
     #   -r requirements.in
     #   jwcrypto
@@ -88,7 +86,7 @@ deprecation==2.1.0
     # via django-helusers
 diff-match-patch==20230430
     # via django-import-export
-django==5.0.4
+django==5.0.6
     # via
     #   -r requirements.in
     #   django-anymail
@@ -137,7 +135,7 @@ django-environ==0.11.2
     # via -r requirements.in
 django-extensions==3.2.3
     # via -r requirements.in
-django-filter==23.5
+django-filter==24.2
     # via
     #   -r requirements.in
     #   wagtail
@@ -147,7 +145,7 @@ django-hijack==3.4.5
     # via -r requirements.in
 django-image-cropping==1.7
     # via -r requirements.in
-django-import-export==4.0.0
+django-import-export==4.0.3
     # via -r requirements.in
 django-modelcluster==6.3
     # via wagtail
@@ -165,7 +163,7 @@ django-redis==5.4.0
     # via -r requirements.in
 django-reversion==5.0.12
     # via -r requirements.in
-django-storages[s3]==1.14.2
+django-storages[s3]==1.14.3
     # via -r requirements.in
 django-taggit==5.0.1
     # via wagtail
@@ -181,7 +179,7 @@ dnspython==2.6.1
     # via -r requirements.in
 draftjs-exporter==5.0.0
     # via wagtail
-drf-nested-routers==0.93.5
+drf-nested-routers==0.94.1
     # via -r requirements.in
 drf-spectacular==0.27.2
     # via -r requirements.in
@@ -201,7 +199,7 @@ factory-boy==3.3.0
     # via
     #   -r requirements.in
     #   pytest-factoryboy
-faker==24.14.1
+faker==25.2.0
     # via factory-boy
 filetype==1.2.0
     # via willow
@@ -226,8 +224,6 @@ graphql-relay==3.2.0
     #   graphene-django
 html2text==2024.2.26
     # via -r requirements.in
-html5lib==1.1
-    # via wagtail
 humanize==4.9.0
     # via -r requirements.in
 idna==3.7
@@ -240,7 +236,7 @@ iniconfig==2.0.0
     # via pytest
 itypes==1.2.0
     # via coreapi
-jinja2==3.1.3
+jinja2==3.1.4
     # via
     #   -r requirements.in
     #   coreschema
@@ -266,7 +262,7 @@ logfmter==0.0.7
     # via -r requirements.in
 loguru==0.7.2
     # via -r requirements.in
-lxml==5.2.1
+lxml==5.2.2
     # via -r requirements.in
 markdown==3.6
     # via -r requirements.in
@@ -302,7 +298,7 @@ pillow-heif==0.16.0
     # via willow
 pluggy==1.5.0
     # via pytest
-polars[xlsx2csv]==0.20.23
+polars[xlsx2csv]==0.20.26
     # via -r requirements.in
 polib==1.2.0
     # via wagtail-localize
@@ -324,7 +320,7 @@ pygithub==2.3.0
     # via -r requirements.in
 pygithub==2.3.0
     # via -r requirements.in
-pygments==2.17.2
+pygments==2.18.0
     # via
     #   pygments-graphql
     #   rich
@@ -335,7 +331,8 @@ pyjwt[crypto]==2.8.0
     #   pygithub
     #   social-auth-core
 pynacl==1.5.0
-pytest==8.2.0
+    # via pygithub
+pytest==8.2.1
     # via
     #   pytest-cov
     #   pytest-django
@@ -368,7 +365,7 @@ pyyaml==6.0.1
     #   drf-spectacular
 redis==5.0.4
     # via django-redis
-referencing==0.35.0
+referencing==0.35.1
     # via
     #   jsonschema
     #   jsonschema-specifications
@@ -388,7 +385,7 @@ requests-oauthlib==2.0.0
     # via social-auth-core
 rich==13.7.1
     # via -r requirements.in
-rpds-py==0.18.0
+rpds-py==0.18.1
     # via
     #   jsonschema
     #   referencing
@@ -398,13 +395,12 @@ rustface==0.1.0
     # via -r requirements.in
 s3transfer==0.10.1
     # via boto3
-sentry-sdk==2.0.1
+sentry-sdk==2.2.1
     # via -r requirements.in
 six==1.16.0
     # via
     #   ecdsa
     #   elasticsearch-dsl
-    #   html5lib
     #   l18n
     #   promise
     #   python-dateutil
@@ -416,7 +412,7 @@ soupsieve==2.5
     # via beautifulsoup4
 sqlparse==0.5.0
     # via django
-tablib[html,ods,xls,xlsx,yaml]==3.5.0
+tablib==3.5.0
     # via django-import-export
 telepath==0.3.1
     # via wagtail
@@ -455,7 +451,7 @@ vine==5.1.0
     #   amqp
     #   celery
     #   kombu
-wagtail==6.0.2
+wagtail==6.1
     # via
     #   -r requirements.in
     #   wagtail-autocomplete
@@ -484,9 +480,7 @@ wagtailgeowidget==8.1.1
 wcwidth==0.2.13
     # via prompt-toolkit
 webencodings==0.5.1
-    # via
-    #   html5lib
-    #   tinycss2
+    # via tinycss2
 willow[heif]==1.8.0
     # via wagtail
 wrapt==1.16.0
