--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ attrs==23.2.0
     # via
     #   jsonschema
     #   referencing
-babel==2.14.0
+babel==2.15.0
     # via -r requirements.in
 beautifulsoup4==4.12.3
     # via wagtail
@@ -59,11 +59,9 @@ coreapi==2.3.3
     # via -r requirements.in
 coreschema==0.0.4
     # via coreapi
-coverage[toml]==7.5.0
-    # via
-    #   coverage
-    #   pytest-cov
-cryptography==42.0.5
+coverage[toml]==7.5.1
+    # via pytest-cov
+cryptography==42.0.7
     # via
     #   -r requirements.in
     #   jwcrypto
@@ -82,7 +80,7 @@ deprecation==2.1.0
     # via django-helusers
 diff-match-patch==20230430
     # via django-import-export
-django==5.0.4
+django==5.0.6
     # via
     #   -r requirements.in
     #   django-anymail
@@ -130,7 +128,7 @@ django-environ==0.11.2
     # via -r requirements.in
 django-extensions==3.2.3
     # via -r requirements.in
-django-filter==23.5
+django-filter==24.2
     # via
     #   -r requirements.in
     #   wagtail
@@ -138,7 +136,7 @@ django-helusers==0.11.0
     # via -r requirements.in
 django-image-cropping==1.7
     # via -r requirements.in
-django-import-export==4.0.0
+django-import-export==4.0.3
     # via -r requirements.in
 django-modelcluster==6.3
     # via wagtail
@@ -156,7 +154,7 @@ django-redis==5.4.0
     # via -r requirements.in
 django-reversion==5.0.12
     # via -r requirements.in
-django-storages==1.14.2
+django-storages==1.14.3
     # via -r requirements.in
 django-taggit==5.0.1
     # via wagtail
@@ -172,7 +170,7 @@ dnspython==2.6.1
     # via -r requirements.in
 draftjs-exporter==5.0.0
     # via wagtail
-drf-nested-routers==0.93.5
+drf-nested-routers==0.94.1
     # via -r requirements.in
 drf-spectacular==0.27.2
     # via -r requirements.in
@@ -192,7 +190,7 @@ factory-boy==3.3.0
     # via
     #   -r requirements.in
     #   pytest-factoryboy
-faker==24.14.1
+faker==25.2.0
     # via factory-boy
 filetype==1.2.0
     # via willow
@@ -217,8 +215,6 @@ graphql-relay==3.2.0
     #   graphene-django
 html2text==2024.2.26
     # via -r requirements.in
-html5lib==1.1
-    # via wagtail
 humanize==4.9.0
     # via -r requirements.in
 idna==3.7
@@ -231,11 +227,11 @@ iniconfig==2.0.0
     # via pytest
 itypes==1.2.0
     # via coreapi
-jinja2==3.1.3
+jinja2==3.1.4
     # via
     #   -r requirements.in
     #   coreschema
-jsonschema==4.21.1
+jsonschema==4.22.0
     # via drf-spectacular
 jsonschema-specifications==2023.12.1
     # via jsonschema
@@ -253,7 +249,7 @@ logfmter==0.0.7
     # via -r requirements.in
 loguru==0.7.2
     # via -r requirements.in
-lxml==5.2.1
+lxml==5.2.2
     # via -r requirements.in
 markdown==3.6
     # via -r requirements.in
@@ -289,7 +285,7 @@ pillow-heif==0.16.0
     # via willow
 pluggy==1.5.0
     # via pytest
-polars[xlsx2csv]==0.20.23
+polars[xlsx2csv]==0.20.26
     # via -r requirements.in
 polib==1.2.0
     # via wagtail-localize
@@ -309,7 +305,7 @@ pycryptodome==3.20.0
     # via -r requirements.in
 pygithub==2.3.0
     # via -r requirements.in
-pygments==2.17.2
+pygments==2.18.0
     # via
     #   pygments-graphql
     #   rich
@@ -321,7 +317,7 @@ pyjwt[crypto]==2.8.0
     #   social-auth-core
 pynacl==1.5.0
     # via pygithub
-pytest==8.2.0
+pytest==8.2.1
     # via
     #   pytest-cov
     #   pytest-django
@@ -353,7 +349,7 @@ pyyaml==6.0.1
     #   drf-spectacular
 redis==5.0.4
     # via django-redis
-referencing==0.35.0
+referencing==0.35.1
     # via
     #   jsonschema
     #   jsonschema-specifications
@@ -373,7 +369,7 @@ requests-oauthlib==2.0.0
     # via social-auth-core
 rich==13.7.1
     # via -r requirements.in
-rpds-py==0.18.0
+rpds-py==0.18.1
     # via
     #   jsonschema
     #   referencing
@@ -381,13 +377,12 @@ rsa==4.9
     # via python-jose
 rustface==0.1.0
     # via -r requirements.in
-sentry-sdk==2.0.1
+sentry-sdk==2.2.0
     # via -r requirements.in
 six==1.16.0
     # via
     #   ecdsa
     #   elasticsearch-dsl
-    #   html5lib
     #   l18n
     #   promise
     #   python-dateutil
@@ -400,9 +395,7 @@ soupsieve==2.5
 sqlparse==0.5.0
     # via django
 tablib==3.5.0
-    # via
-    #   django-import-export
-    #   tablib
+    # via django-import-export
 telepath==0.3.1
     # via wagtail
 text-unidecode==1.3
@@ -439,7 +432,7 @@ vine==5.1.0
     #   amqp
     #   celery
     #   kombu
-wagtail==6.0.2
+wagtail==6.1
     # via
     #   -r requirements.in
     #   wagtail-autocomplete
@@ -468,9 +461,7 @@ wagtailgeowidget==8.1.1
 wcwidth==0.2.13
     # via prompt-toolkit
 webencodings==0.5.1
-    # via
-    #   html5lib
-    #   tinycss2
+    # via tinycss2
 willow[heif]==1.8.0
     # via
     #   wagtail
