--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   build:
-    uses: ./.github/workflows/build.yaml
+    uses: kausaldev/github-actions/.github/workflows/build-backend.yaml@main
     secrets: inherit
 
   test:
@@ -16,7 +16,7 @@ jobs:
 
   deploy:
     needs: [build]
-    uses: ./.github/workflows/deploy.yaml
+    uses: kausaldev/github-actions/.github/workflows/deploy.yaml@main
     secrets: inherit
     if: needs.build.outputs.deployment_env
     with:
