--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   build:
-    uses: ./.github/workflows/build.yaml
+    uses: kausaldev/github-actions/workflows/build-backend.yaml@main
     secrets: inherit
 
   test:
