--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -1,7 +1,7 @@
 name: reviewdog
 on:
   pull_request:
-  workflow_call:
+  push:
 
 jobs:
   reviewdog:
@@ -34,7 +34,9 @@ jobs:
           cache-dependency-path: |
             requirements-lint.txt
       - name: Install dependencies
-        run: python -m pip install -r requirements-lint.txt -r requirements.txt
+        run: |
+          python -m pip install -r requirements-lint.txt -r requirements.txt
+          sudo apt update && sudo apt install --no-install-recommends -y libproj-dev gdal-bin
       - name: Save cache
         uses: actions/cache/save@v4
         if: ${{ ! steps.cache.outputs.cache-hit }}
@@ -66,4 +68,4 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          reviewdog -reporter=github-pr-check -log-level=debug -fail-on-error
+          reviewdog -reporter=github-pr-check -log-level=debug
