--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -46,18 +46,26 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('requirements-lint.txt', 'requirements.txt') }}
 
       - name: Get push diff
-        if: github.event_name == 'push'
+        if: github.event_name == 'push' && github.event.before
         id: push_diff
         run: |
-          echo ${{ github.event.before }}..${{ github.sha }}
-          git diff --find-renames --submodule=diff ${{ github.event.before }} ${{ github.sha }} > ${{ runner.temp }}/changes.diff
+          # Check if the "before" hash exists
+          if [ "$(git cat-file -t ${{github.event.before}}" = "commit" ] ; then
+            echo Diffing ${{ github.event.before }}..${{ github.sha }}
+            git diff --find-renames --submodule=diff ${{ github.event.before }} ${{ github.sha }} > ${{ runner.temp }}/changes.diff
+            echo has_diff=true >> $GITHUB_OUTPUT
+          else
+            echo Commit ${{ github.event.before }} does not exist -- skipping reviewdog
+            echo has_diff=false >> $GITHUB_OUTPUT
+          fi
+        shell: bash
 
       - uses: reviewdog/action-setup@v1
         with:
           reviewdog_version: latest # Optional. [latest,nightly,v.X.Y.Z]
 
       - name: Run reviewdog for push
-        if: github.event_name == 'push'
+        if: github.event_name == 'push' && steps.push_diff.outputs.has_diff == 'true'
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
